UtiLITI improvements (#457)
* Address code smells and outdated language use in utiLITI.
* Fix emitter particle type selection in utiLITI.